# rust_huggingface

./: .env  Cargo.toml  README.md  model.txt
src/: main.rs
