[package]
name = "rust_hf"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.4"
serde_json = "1.0"
spinners = "1.0"
dotenv = "0.15"
serde = { version = "1.0.203", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["json"] }
termcolor = "1.4.1"
